stylesheets/_component.slider.scss
.slider-container {
    padding: $padding-base * 2;

    @include respond-min($screen-tablet) {
        margin: 5em auto;
        padding: 0;
        width: 600px;
    }
}

.slider {
    display: inline-block;
    position: relative;

    @include respond-min($screen-tablet) {
        width: 600px;
    }
}

.slider__back {
    background-color: color(jadu-blue);
    border-top-left-radius: $border-radius-large;
    color: color(white);
    width: 100%;

    @include respond-min($screen-tablet) {
        border-bottom-right-radius: $border-radius-large;
        bottom: $padding-base * 2;
        position: absolute;
        text-align: center;
        top: $padding-base * 2;
    }
}

.slider__front {
    background-color: color(white);
    border-bottom-right-radius: $border-radius-large;
    min-height: 300px;
    z-index: 1;

    @include respond-min($screen-tablet) {
        position: relative;
        float: right;
    }
}

.slider__inner {
    overflow: hidden;
    padding: $padding-base * 2;

    @include respond-min($screen-tablet) {
        width: 300px;
    }
}

.slider-logo {
    display: block;
    width: 45px;

    @include respond-min($screen-tablet) {
        margin: 0 auto;
    }
}

.slider-title {
    font-size: $font-size-large;
    line-height: 45px;
}

// form alignment
.slider .form {
    fieldset {
        padding: 0;
    }

    p {
        margin-bottom: $line-height-base / 2;
    }

    .legend {
        border-bottom: 1px solid color(border);
        line-height: $line-height-base;
        margin-bottom: 5px;
    }

    .form__group {
        margin-bottom: 5px;
    }

    .form__group--top .control__label {
        margin-bottom: 0;
    }

    .form__control {
        height: $font-size-xxlarge;
        line-height: $font-size-xxlarge;
        padding: 0 8px;
    }

    .form__actions {
        border-top: 0;
        padding-bottom: 0;
    }
}

